Remove deprecated controls; fix search component word wrap bug; add new field to result model; improve search engine (better results); fix pom => build config error;

--- a/frontend/src/app/search/search.component.css
+++ b/frontend/src/app/search/search.component.css
@@ -37,4 +37,9 @@
   display: inline-block;
 }
 
+.no-wrap {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 
